--- a/The Butcher/gameData.plist
+++ b/The Butcher/gameData.plist
@@ -2,6 +2,15 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>meatdetails</key>
+	<array>
+		<dict>
+			<key>desc</key>
+			<string></string>
+			<key>name</key>
+			<string>rib</string>
+		</dict>
+	</array>
 	<key>minigames</key>
 	<array>
 		<dict>
