--- a/The Butcher/The Butcher-Info.plist
+++ b/The Butcher/The Butcher-Info.plist
@@ -4,6 +4,7 @@
 <dict>
 	<key>UIAppFonts</key>
 	<array>
+		<string>LinLibertine_R.ttf</string>
 		<string>Franchise-Bold.ttf</string>
 	</array>
 	<key>CFBundleDevelopmentRegion</key>
