--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ profile
 *.moved-aside
 DerivedData
 .idea/
+The Butcher.xcodeproj/project.xcworkspace/xcuserdata/Wouter.xcuserdatad/UserInterfaceState.xcuserstate
