--- a/The Butcher/gameData.plist
+++ b/The Butcher/gameData.plist
@@ -53,7 +53,7 @@
 		</dict>
 		<dict>
 			<key>desc</key>
-			<string>Pop it like it&apos;s hot!</string>
+			<string>Now butcher the piece to a burger</string>
 		</dict>
 		<dict>
 			<key>desc</key>
