--- a/The Butcher/gameData.plist
+++ b/The Butcher/gameData.plist
@@ -49,7 +49,7 @@
 		</dict>
 		<dict>
 			<key>desc</key>
-			<string>Cut your favorite slice</string>
+			<string>Choose your favorite piece of Aberdeen Angus</string>
 		</dict>
 		<dict>
 			<key>desc</key>
