Game 3 af + labels game 1

--- a/The Butcher/gameData.plist
+++ b/The Butcher/gameData.plist
@@ -57,15 +57,15 @@
 		</dict>
 		<dict>
 			<key>desc</key>
-			<string>Cut your favorite slice</string>
+			<string>Cook the burger the way you want him</string>
 		</dict>
 		<dict>
 			<key>desc</key>
-			<string>Cut your favorite slice</string>
+			<string>Add some extra&apos;s</string>
 		</dict>
 		<dict>
 			<key>desc</key>
-			<string>Cut your favorite slice</string>
+			<string>Finish it with a delightfull sausce</string>
 		</dict>
 	</array>
 </dict>
