--- a/The Butcher/gameData.plist
+++ b/The Butcher/gameData.plist
@@ -2,6 +2,69 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>sausdetails</key>
+	<array>
+		<dict>
+			<key>R</key>
+			<integer>96</integer>
+			<key>G</key>
+			<integer>30</integer>
+			<key>B</key>
+			<integer>27</integer>
+			<key>desc</key>
+			<string>&quot;Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...&quot;</string>
+			<key>name</key>
+			<string>BBQ</string>
+		</dict>
+		<dict>
+			<key>R</key>
+			<integer>164</integer>
+			<key>G</key>
+			<integer>107</integer>
+			<key>B</key>
+			<integer>56</integer>
+			<key>desc</key>
+			<string>&quot;Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...&quot;</string>
+			<key>name</key>
+			<string>Truffle</string>
+		</dict>
+		<dict>
+			<key>R</key>
+			<integer>255</integer>
+			<key>G</key>
+			<integer>239</integer>
+			<key>B</key>
+			<integer>164</integer>
+			<key>desc</key>
+			<string>&quot;Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...&quot;</string>
+			<key>name</key>
+			<string>Babaganouch</string>
+		</dict>
+		<dict>
+			<key>R</key>
+			<integer>72</integer>
+			<key>G</key>
+			<integer>14</integer>
+			<key>B</key>
+			<integer>14</integer>
+			<key>desc</key>
+			<string>&quot;Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...&quot;</string>
+			<key>name</key>
+			<string>Butcher Sauce</string>
+		</dict>
+		<dict>
+			<key>R</key>
+			<integer>254</integer>
+			<key>G</key>
+			<integer>246</integer>
+			<key>B</key>
+			<integer>215</integer>
+			<key>desc</key>
+			<string>&quot;Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...&quot;</string>
+			<key>name</key>
+			<string>Tahini</string>
+		</dict>
+	</array>
 	<key>meatdetails</key>
 	<array>
 		<dict>
@@ -66,6 +129,10 @@
 		<dict>
 			<key>desc</key>
 			<string>Finish it with a delightfull sausce</string>
+		</dict>
+		<dict>
+			<key>desc</key>
+			<string>Submit your burger</string>
 		</dict>
 	</array>
 </dict>
