--- a/The Butcher/gameData.plist
+++ b/The Butcher/gameData.plist
@@ -2,6 +2,159 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>extras</key>
+	<array>
+		<dict>
+			<key>category</key>
+			<string>Fruit</string>
+			<key>name</key>
+			<string>Apple</string>
+			<key>photo</key>
+			<string>apple</string>
+			<key>id</key>
+			<integer>1</integer>
+		</dict>
+		<dict>
+			<key>category</key>
+			<string>Garniture</string>
+			<key>name</key>
+			<string>Bacon</string>
+			<key>photo</key>
+			<string>bacon</string>
+			<key>id</key>
+			<integer>2</integer>
+		</dict>
+		<dict>
+			<key>category</key>
+			<string>Fruit</string>
+			<key>name</key>
+			<string>Banana</string>
+			<key>photo</key>
+			<string>banana</string>
+			<key>id</key>
+			<integer>3</integer>
+		</dict>
+		<dict>
+			<key>category</key>
+			<string>Vegetable</string>
+			<key>name</key>
+			<string>Beans</string>
+			<key>photo</key>
+			<string>beans</string>
+			<key>id</key>
+			<integer>4</integer>
+		</dict>
+		<dict>
+			<key>category</key>
+			<string>Vegetable</string>
+			<key>name</key>
+			<string>Carrot</string>
+			<key>photo</key>
+			<string>carrot</string>
+			<key>id</key>
+			<integer>5</integer>
+		</dict>
+		<dict>
+			<key>category</key>
+			<string>Garniture</string>
+			<key>name</key>
+			<string>Cheese</string>
+			<key>photo</key>
+			<string>cheese</string>
+			<key>id</key>
+			<integer>6</integer>
+		</dict>
+		<dict>
+			<key>category</key>
+			<string>Spices</string>
+			<key>name</key>
+			<string>Chili Pepper</string>
+			<key>photo</key>
+			<string>chili</string>
+			<key>id</key>
+			<integer>7</integer>
+		</dict>
+		<dict>
+			<key>category</key>
+			<string>Extra</string>
+			<key>name</key>
+			<string>French Fries</string>
+			<key>photo</key>
+			<string>chips</string>
+			<key>id</key>
+			<integer>8</integer>
+		</dict>
+		<dict>
+			<key>category</key>
+			<string>Vegetable</string>
+			<key>name</key>
+			<string>Cucumber</string>
+			<key>photo</key>
+			<string>cucumber</string>
+			<key>id</key>
+			<integer>9</integer>
+		</dict>
+		<dict>
+			<key>category</key>
+			<string>Fruit</string>
+			<key>name</key>
+			<string>Lemon</string>
+			<key>photo</key>
+			<string>lemon</string>
+			<key>id</key>
+			<integer>10</integer>
+		</dict>
+		<dict>
+			<key>category</key>
+			<string>Vegetable</string>
+			<key>name</key>
+			<string>Lettuce</string>
+			<key>photo</key>
+			<string>lettuce</string>
+			<key>id</key>
+			<integer>11</integer>
+		</dict>
+		<dict>
+			<key>category</key>
+			<string>Garniture</string>
+			<key>name</key>
+			<string>Onions</string>
+			<key>photo</key>
+			<string>onion</string>
+			<key>id</key>
+			<integer>12</integer>
+		</dict>
+		<dict>
+			<key>category</key>
+			<string>Vegetable</string>
+			<key>name</key>
+			<string>Bell Pepper</string>
+			<key>photo</key>
+			<string>paprika</string>
+			<key>id</key>
+			<integer>13</integer>
+		</dict>
+		<dict>
+			<key>category</key>
+			<string>Garniture</string>
+			<key>name</key>
+			<string>Pickle</string>
+			<key>photo</key>
+			<string>pickle</string>
+			<key>id</key>
+			<integer>14</integer>
+		</dict>
+		<dict>
+			<key>category</key>
+			<string>Vegetable</string>
+			<key>name</key>
+			<string>Tomato</string>
+			<key>photo</key>
+			<string>tomato</string>
+			<key>id</key>
+			<integer>15</integer>
+		</dict>
+	</array>
 	<key>sausdetails</key>
 	<array>
 		<dict>
